--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: actividad_integradora
+name: MastogrApp
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -74,6 +74,7 @@ dependencies:
   stream_transform: 2.1.0
   table_calendar: 3.0.9
   timeago: 3.2.2
+  uuid: ^3.0.0
   url_launcher: 6.1.10
   url_launcher_android: 6.0.27
   url_launcher_ios: 6.1.4
